# LumenX-MCP

./: .env.example  .env.template  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.gnn  EXAMPLES.md  GNN_ARCHITECTURE.md  GNN_PROJECT_SUMMARY.md  GNN_QUICKSTART.md  GNN_README.md  INTEGRATION.md  LICENSE  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  ROADMAP.md  SUPPORT.md  docker-compose.gnn.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-gnn.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
data/: README.md  legal_spend_sample.csv
docker/: Dockerfile.frontend  nginx-frontend.conf  nginx.conf  supervisord.conf
docs/: database_schema.sql
docs/visuals/: lumen_x_vix.html
examples/: advanced_usage.py  basic_usage.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatAssistant.tsx  ControlPanel.tsx  CriticalFilePanel.tsx  GraphVisualization.tsx  Header.tsx  LoadingScreen.tsx  NodeDetailPanel.tsx  RightSidebar.tsx
frontend/src/services/: api.ts
frontend/src/types/: graph.ts
gnn_app/: __init__.py  config.py
gnn_app/agents/: __init__.py  google_adk_agent.py
gnn_app/api/: __init__.py  main.py
gnn_app/core/: __init__.py  data_ingestion.py  graph_schema.py
gnn_app/models/: __init__.py  gnn_model.py
gnn_app/services/: __init__.py  embedding_service.py  gnn_processor.py  llm_service.py
scripts/: deploy.sh  install.py
src/legal_spend_mcp/: __init__.py  config.py  data_sources.py  interfaces.py  models.py  registry.py  server.py  unimplemented_data_sources.py
tests/: __init__.py  conftest.py  test_data_sources.py  test_ediscovery.py  test_models_config.py  test_server.py
